# neuralnet

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  perf.txt  performance.txt  requirements.txt
cmake/: CompilerFlags.cmake  GetTargets.cmake  Options.cmake  PlatformMacros.cmake  SIMDCheck.cmake
docs/: main.dox
docs/building/: build_options.dox  building.dox
lib/: CMakeLists.txt
lib/header/: allocator.h  booltype.h  endianness.h  file_io.h  file_reader.h  file_util.h  fs_util.h  logger.h
lib/src/: allocator.c  endianness.c  file_io.c  file_reader.c  file_util.c  logger.c  random.c
math/blas/: CMakeLists.txt
math/blas/header/: vector.h
math/linear_alg/: CMakeLists.txt
math/linear_alg/header/: matrix.h  vector.h
math/linear_alg/matrix/header/: matrix.h
math/linear_alg/matrix/src/: avx_matrix.c  com_matrix.c  scalar_matrix.c
math/linear_alg/src/: matrix.c  vector.c
math/linear_alg/vector/header/: vector.h
math/linear_alg/vector/src/: avx_vector.c  com_vector.c  scalar_vector.c
nn/: CMakeLists.txt
nn/ffn/: CMakeLists.txt
nn/ffn/header/: ffn.h  ffn_bpropagate.h  ffn_fpropagate.h  ffn_init.h  ffn_io.h  ffn_mempool.h  ffn_statistic.h  ffn_type.h  ffn_util.h
nn/ffn/src/: ffn.c  ffn_bpropagate.c  ffn_fpropagate.c  ffn_init.c  ffn_io.c  ffn_mempool.c  ffn_statistic.c  ffn_util.c
nn/header/: activation.h  cost.h  datasets.h  generator.h  initer.h  optimizer.h
nn/src/: activation.c  cost.c  generator.c  initer.c  optimizer.c
nn/src/optimizer/: gradient_descent.c  momentum_optimize.c  optimizer.c
python/: CMakeLists.txt
python/header/: grapher.h  python_get_mnist.h  python_grapher.h  python_interface.h  python_test.h
python/psrc/: get_mnist.py  gradient_plotter.py  grapher.py  test.py
python/src/: grapher.c  python_get_mnist.c  python_grapher.c  python_interface.c  python_test.c
simd/: CMakeLists.txt
simd/avx/: CMakeLists.txt
simd/avx/header/: avx.h
simd/avx/src/: avx.c
simd/header/: avx.h  avxmm.h  avxmm256.h
simd/src/: avx.c  avxmm.c  avxmm256.c
src/: env_test.c  linear.c  linear_noise.c  main.c  main_noise.c  mnist.c  mnist_benchmark.c  mnist_test.c  space_test.c  speed_test_b.c  speed_test_p.c  test.c  utest.c  xor.c
tests/unit/blas/: vector.test.c
threading/: CMakeLists.txt
threading/header/: threading.h
utils/: CMakeLists.txt
utils/header/: allocator.h  file_io.h  logger.h  random.h
utils/src/: allocator.c  file_io.c  logger.c  random.c
